# Krec2MP4

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
Data/: GLideN64.ini
res/: app.rc
src/: audio_capture.h  audio_capture_plugin.cpp  converter.cpp  converter.h  emulator.cpp  emulator.h  ffmpeg_encoder.cpp  ffmpeg_encoder.h  frame_capture.cpp  frame_capture.h  gui_main.cpp  gui_resources.h  krec_parser.cpp  krec_parser.h  main.cpp  pif_replay.cpp  pif_replay.h  vidext.cpp  vidext.h
